Replace index.html with proper markup file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello, World!
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>I'm hosted with GitHub Pages and I aspire to become
+        <a href="https://github.com/ste-fan">ste-fan</a>'s
+        User Page.</p>
+  </body>
+</html>
